--- a/nuevo-comentario.html
+++ b/nuevo-comentario.html
@@ -33,11 +33,14 @@
                                 <label for="comment">Comentario:</label>
                                 <textarea class="form-control" id="comment" name="comment" rows="5" required></textarea>
                             </div>
+                            <div class="form-group">
+                                <label for="post">Seleccionar Post:</label>
+                                <div id="post-list" class="form-control" style="height: auto;">
+                                    <!-- Aquí se mostrarán los posts con botones de radio -->
+                                </div>
+                            </div>
                             <button type="submit" class="btn btn-primary btn-block">Agregar Comentario</button>
                         </form>
-                        <div id="comments" class="mt-4">
-                            <!-- Aquí se mostrarán los comentarios -->
-                        </div>
                     </div>
                 </div>
             </div>
@@ -49,5 +52,85 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Custom JS para manejar los comentarios -->
     <script src="js/comentarios.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetchPosts();
+        });
+
+        async function fetchPosts() {
+            try {
+                const response = await fetch('https://20dotpyrgj.execute-api.us-east-1.amazonaws.com/production/posts');
+                const posts = await response.json();
+                const postList = document.getElementById('post-list');
+
+                console.log(posts);
+
+                posts.message.forEach(post => {
+                    const postItem = document.createElement('div');
+                    postItem.classList.add('form-check');
+                    
+                    const postInput = document.createElement('input');
+                    postInput.classList.add('form-check-input');
+                    postInput.type = 'radio';
+                    postInput.name = 'post';
+                    postInput.id = `post-${post.post_id}`;
+                    postInput.value = post.post_id;
+                    
+                    const postLabel = document.createElement('label');
+                    postLabel.classList.add('form-check-label');
+                    postLabel.htmlFor = `post-${post.post_id}`;
+                    postLabel.textContent = post.title; // Assuming the post has a title attribute
+
+                    postItem.appendChild(postInput);
+                    postItem.appendChild(postLabel);
+                    postList.appendChild(postItem);
+                });
+            } catch (error) {
+                console.error('Error fetching posts:', error);
+            }
+        }
+
+        document.getElementById('add-comment-form').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const comment = document.getElementById('comment').value;
+            const postId = document.querySelector('input[name="post"]:checked').value;
+            const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
+            const email = loggedInUser ? loggedInUser.email : '';
+
+            if (!email) {
+                alert('Usuario no autenticado');
+                return;
+            }
+
+            try {
+                const response = await fetch('https://20dotpyrgj.execute-api.us-east-1.amazonaws.com/production/comment', { // Update with your actual comment API endpoint
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+
+                        post_id: postId,
+                        email: email,
+                        content: comment
+                    })
+                });
+
+                console.log(response);
+
+                if (response.ok) {
+                    alert('Comentario agregado exitosamente');
+                    // Clear the form
+                    document.getElementById('add-comment-form').reset();
+                } else {
+                    alert('Error al agregar comentario');
+                }
+            } catch (error) {
+                console.error('Error adding comment:', error);
+                alert('Error al agregar comentario');
+            }
+        });
+    </script>
 </body>
 </html>
